--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head;any other head content must come *after* these tags -->
+    
+    <title>Saguaro Janes</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/template.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+  <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          Saguaro Janes <span class="tagline">we give them something to eat</span>
+        </a>
+      </div>
+      <div class="navbar-collapse collapse" id="navbar-collapsible">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#what-we-do">What we do</a></li>
+          <li><a href="#donation" class="btn btn-success">Donate Today</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <div class="container content">
+    <section id="carousel">
+      <!-- Carousel
+      ================================================== -->
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img class="first-slide" src="images/facebook-img1.jpg" alt="First slide">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Example headline.</h1>
+                <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="second-slide" src="images/facebook-img2.jpg" alt="Second slide">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Another example headline.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="third-slide" src="images/facebook-img3.jpg" alt="Third slide">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>One more for good measure.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div><!-- /.carousel -->
+    </section>
+    <section id="about-us">
+      <h1>About us</h1>
+      <h3>Our Mission</h3>
+      <p>
+        We seek to follow the admonition of Jesus to his disciples as recorded
+        in Matthew 14:16, "They do not need to go away. You give them something
+        to eat." We will do this by actively working with organizations in our
+        community to gather food to distribute to those who are hungry.
+      </p>
+      <h3>Our Story</h3>
+      <p>
+        Saguaro Jane's begin in the 1940s when a small group of women decided
+        to assist the families of those who had loved ones who went off to war.
+        Since then, our organization has grown to a group of FIND THE NUMBER of
+        men and women volunteers who work tirelessly to provide food to our community.
+      </p>
+      <p>
+        True to our desire to help, our organization is composed of volunteers.
+        No one is paid, and all donations go to helping out the hungry and needy
+        through our various programs. Thanks to the generous donations of others,
+        we are able to make a difference in our community and give something to
+        eat to the hungry.
+      </p>
+      <!-- Text taken from newspaper article
+      Saguaro Jane's in Wittmann was formed in the early 1940s by five or six women
+      to assist families whose loved ones went off to war. The non-profit organization
+      now has 25 women and men as members. These volunteers are at the center at 9 a.m.
+      Thursdays for Brown Bag Day, a huge food program the Saguaro Jane's organization
+      operates in conjunction with the St. Mary's Food Bank. The center is on the
+      southern side of U.S. 60 on Wilson Avenue. Between 17,000 and 20,000 pounds
+      of produce, meat, bread and dairy products are delivered. The volunteers unload
+      the truck, sort the food items and pack food boxes for 275 families, all from
+      the Wickenburg, Morristown, Circle City, Wittmann and Surprise areas. These
+      families start lining up outside the center by 7 a.m. and the doors open at
+      10. The volunteers help direct the participants to their food boxes and if
+      they need assistance they help carry the boxes to their vehicles. Volunteers
+      do salvaging the first Friday of every month. A truck brings boxed, canned
+      foods and drinks from St. Mary's Food Bank. These are sorted, washed and given
+      out on Brown Bag Day. On the third Monday of the Month, the center holds three
+      other food programs. These are Commodities, Food Plus (a federal program) and
+      the Value Box. More than 300 families participate on this day. Saguaro Jane's
+      also has a thrift store where many residents shop weekly. Clothing, shoes,
+      kitchen items, knickknacks, toys, linens and other items are donated. This
+      store is maintained by volunteers and all monetary donations goes to pay
+      expenses to keep the Saguaro Jane's center open. Without the many volunteers
+      generously giving their time, these programs would not have the success they
+      do in serving the needs of the community.
+      - Nancy Utter, secretary
+      for Saguaro Jane's
+      -->
+    </section>
+    <section id="what-we-do">
+      <h1>What we do</h1>
+      <p>
+        The main purpose of our organization is to feed the hungry. We do this through
+        the following programs:
+      </p>
+      <h4>Brown Bag Day</h4>
+      <p>
+        Each Thursday, in cooperation with St. Mary's Food Bank, Saguaro Janes volunteers will prepare
+        food boxes to be distributed to needing families. Starting at 10 AM, our volunteers
+        help direct participants to their food boxes and if they need assistance will
+        help carry their vehicles.
+      </p>
+      <h4>Commodities</h4>
+      <p>More info needed</p>
+      <h4>Food Plus</h4>
+      <p>More info needed</p>
+      <h4>Value Box</h4>
+      <p>More info needed</p>
+      <h4>Thanksgiving</h4>
+      <p>More info needed</p>
+      <h4>Christmas</h4>
+      <p>More info needed</p>
+      <h4>Thrift Store</h4>
+      <p>
+        Saguaro Jane's also has a thrift store where many residents shop weekly.
+        Clothing, shoes, kitchen items, knickknacks, toys, linens and other items
+        are donated. This store is maintained by volunteers and all monetary donations
+        goes to pay expenses to keep the Saguaro Jane's center open.
+      </p>
+    </section>
+    <section id="donation">
+      Please submit a donation today.
+    </section>
+  </div>
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="js/template.js"></script>
+  <script src="../js/analytics.js"></script>
+</body>
+</html>
